<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ButtonStyle" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/promptText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/promptValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/button3"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/button6"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button7"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/button8"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/button9"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" >

                <Button
                    android:id="@+id/buttonC"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_C" />

                <Button
                    android:id="@+id/button0"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/buttonDot"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:background="@drawable/background_view_rounded_single" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>