<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ssss"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/default_screen_bg" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:background="@drawable/transparent_inside_and_white_border"
			android:orientation="vertical"
			android:padding="10dp" >

			<TextView
				android:id="@+id/twIp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:paddingEnd="10dp"
				android:paddingLeft="10dp"
				android:paddingStart="10dp"
				android:text="@string/ip"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic|bold" />

			<EditText
				android:id="@+id/etIp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:background="@drawable/background_view_rounded_single"
				android:padding="5sp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:background="@drawable/transparent_inside_and_white_border"
			android:orientation="vertical"
			android:padding="10dp" >

			<TextView
				android:id="@+id/twPort"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:paddingEnd="10dp"
				android:paddingLeft="10dp"
				android:paddingStart="10dp"
				android:text="@string/port"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic|bold" />

			<EditText
				android:id="@+id/etPort"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:background="@drawable/background_view_rounded_single"
				android:inputType="numberDecimal"
				android:padding="5sp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:background="@drawable/transparent_inside_and_white_round_border"
			android:orientation="vertical"
			android:padding="10dp" >

			<TextView
				android:id="@+id/twTvId"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:paddingEnd="10dp"
				android:paddingLeft="10dp"
				android:paddingStart="10dp"
				android:text="@string/tvId"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic|bold" />

			<EditText
				android:id="@+id/etTvId"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:background="@drawable/background_view_rounded_single"
				android:inputType="numberDecimal"
				android:padding="5sp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:background="@drawable/transparent_inside_and_white_round_border"
			android:orientation="vertical"
			android:padding="10dp" >

			<TextView
				android:id="@+id/twSiteId"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:paddingEnd="10dp"
				android:paddingLeft="10dp"
				android:paddingStart="10dp"
				android:text="@string/siteId"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic|bold" />

			<EditText
				android:id="@+id/etSiteId"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:background="@drawable/background_view_rounded_single"
				android:inputType="numberDecimal"
				android:padding="5sp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:background="@drawable/transparent_inside_and_white_round_border"
			android:orientation="vertical"
			android:padding="10dp" >

			<TextView
				android:id="@+id/twTvUrl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:paddingEnd="10dp"
				android:paddingLeft="10dp"
				android:paddingStart="10dp"
				android:text="@string/tvUrl"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic|bold" />

			<EditText
				android:id="@+id/etTvUrl"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:background="@drawable/background_view_rounded_single"
				android:inputType="textUri"
				android:padding="5sp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:weightSum="3" >

		<Button
			android:id="@+id/buttonUpdateApp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:text="@string/update_app" />

		<Button
			android:id="@+id/buttonOk"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:text="@string/OK" />

		<Button
			android:id="@+id/buttonCancel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:text="@string/cancel" />
	</LinearLayout>

</RelativeLayout>