<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@color/default_screen_bg" >

	<!-- Header title view -->

	<LinearLayout
		android:id="@+id/llTopMenu"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:background="#53000000"
		android:clipChildren="false"
		android:orientation="horizontal" >

		<ImageView
			android:id="@+id/ivTitleImage"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="5dp"
			android:src="@drawable/settings" />

		<TextView
			android:id="@+id/tvTitle"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:textStyle="bold|italic"
			android:gravity="center"
			android:text="@string/settings"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@android:color/white" />
	</LinearLayout>

	<!-- Middle section -->

	<LinearLayout
		android:id="@+id/llSettingsPassword"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/llTopMenu"
		android:layout_gravity="center"
		android:layout_margin="10dp"
		android:background="@drawable/transparent_inside_and_white_round_border"
		android:orientation="vertical"
		android:padding="10dp" >

		<TextView
			android:id="@+id/twPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:paddingEnd="10dp"
			android:paddingLeft="10dp"
			android:paddingStart="10dp"
			android:text="@string/password_required"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@android:color/white"
			android:textStyle="italic|bold" />

		<EditText
			android:id="@+id/etPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:background="@drawable/background_view_rounded_single"
			android:inputType="textUri"
			android:padding="5sp"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@android:color/white"
			android:textStyle="bold" />
	</LinearLayout>

	<!-- Bottom menu -->

	<LinearLayout
		android:id="@+id/llBottomMenu"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_below="@+id/llSettingsPassword"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:clipChildren="false"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/btnCancel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:text="@string/cancel" />

		<Button
			android:id="@+id/btnOk"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:text="@string/OK" />
	</LinearLayout>

</RelativeLayout>